--- a/Croatian/main/Backup.apk/res/values-hr/strings.xml
+++ b/Croatian/main/Backup.apk/res/values-hr/strings.xml
@@ -29,6 +29,10 @@
   <string name="abc_toolbar_collapse_description">Sažmi</string>
   <string name="abort_backup_confirm">"Izrada Sig. kopije nije završena. Svejedno zaustaviti?"</string>
   <string name="abort_restore_confirm">"Vraćanje nije završeno. Svejedno zaustaviti?"</string>
+  <string name="accessibility_sliding_button_state_description_off">Isključeno</string>
+  <string name="accessibility_sliding_button_state_description_on">Uključeno</string>
+  <string name="accessibility_tab_state_description_unselect">Nije odabrano</string>
+  <string name="accessibility_tab_statedesc_unselect">Nije odabrano</string>
   <string name="account_contact_backup_info">Podaci Google računa, Xiaomi računa i kontakata</string>
   <string name="account_login">Prijavite se</string>
   <string name="account_summary">Sig. kopija Xiaomi računa, Google računa i ostalih korisničkih podataka</string>
@@ -81,6 +85,8 @@
   <string name="backup_hint">"Držite vaš uređaj uključenim</string>
   <string name="backup_hint_onpad">Držite vaš uređaj uključenim</string>
   <string name="backup_hint_pad">Držite uređaj uključenim</string>
+  <string name="backup_item_collapsed">Sažeto</string>
+  <string name="backup_item_expanded">Prošireno</string>
   <string name="backup_is_running">Izrada Sig. kopije uređaja</string>
   <string name="backup_new">Novo:</string>
   <string name="backup_notice_content">"Vaše sigurnosne kopije neće biti kriptirane, što znači da im mogu pristupiti ili ublažiti aplikacije trećih strana. Mogu se pojaviti i drugi sigurnosni rizici. Svakako pohranite sigurnosno kopirane stavke na dobro zaštićeno mjesto."</string>
@@ -393,11 +399,17 @@ prvo biste trebali izraditi iCloud sigurnosnu kopiju."</string>
   <string name="miliao_account_guide">Koristite svoj Xiaomi račun za prijavu na Xiaomi Cloud, Teme, te druge Xiaomi usluge, s bilo kojeg mjesta.</string>
   <string name="miliao_account_login">Prijavite se s Mi Talk</string>
   <string name="miuix_access_state_desc">Odabrano</string>
+  <string name="miuix_accessibility_title">Naslov</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
   <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_action_mode_title_empty">Odaberi stavke</string>
   <string name="miuix_appcompat_actionbar_immersion_button_more_description">Više</string>
+  <string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
+  <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
+  <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izađi iz načina uređivanja</string>
+  <string name="miuix_appcompat_accessibility_new_message">Nova obavijest</string>
+  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Uđi u način uređivanja</string>
   <string name="miuix_appcompat_cancel_description">Odustani</string>
   <string name="miuix_appcompat_confirm_description">Potvrdi</string>
   <string name="miuix_appcompat_delete_description">Izbriši</string>
@@ -411,7 +423,10 @@ prvo biste trebali izraditi iCloud sigurnosnu kopiju."</string>
   <string name="miuix_appcompat_select_item">Odaberi stavke</string>
   <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
   <string name="miuix_indexer_collect">Zbirke</string>
-  <string name="miuix_indexer_selected">Odabrano %s</string>
+  <string name="miuix_progressbar_loading">Samo trenutak…</string>
+  <string name="miuix_show_password">Prikaži zaporku</string>
+  <string name="miuix_stretchablewidget_collapsed">Sažeto</string>
+  <string name="miuix_stretchablewidget_expanded">Prošireno</string>
   <string name="miuix_sbl_tracking_progress_labe_pull_to_refresh">Povuci za osvježiti</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshed">Gotovo</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshing">Osvježavanje</string>
