--- a/Croatian/main/DeskClock.apk/res/values-hr/strings.xml
+++ b/Croatian/main/DeskClock.apk/res/values-hr/strings.xml
@@ -361,6 +361,9 @@
   <string name="more_settings">Postavke</string>
   <string name="mtrl_badge_numberless_content_description">Nova obavijest</string>
   <string name="mtrl_chip_close_icon_content_description">Ukloni %1$s</string>
+  <string name="mtrl_checkbox_state_description_checked">Označeno</string>
+  <string name="mtrl_checkbox_state_description_indeterminate">Djelomično označeno</string>
+  <string name="mtrl_checkbox_state_description_unchecked">Nije označeno</string>
   <string name="mtrl_exceed_max_badge_number_content_description">Više od %1$d novih obavijesti</string>
   <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
   <string name="mtrl_picker_a11y_next_month">Promijeni na sljedeći mjesec</string>
@@ -372,6 +375,7 @@
   <string name="mtrl_picker_date_header_title">Odaberite datum</string>
   <string name="mtrl_picker_date_header_unselected">Odaberite datum</string>
   <string name="mtrl_picker_day_of_week_column_header">Kolona dana: %1$s</string>
+  <string name="mtrl_picker_end_date_description">Datum završetka %1$s</string>
   <string name="mtrl_picker_invalid_format">Pogrešan format.</string>
   <string name="mtrl_picker_invalid_format_use">Koristi: %1$s</string>
   <string name="mtrl_picker_invalid_range">Pogrešan raspon.</string>
