--- a/Croatian/main/MiuiGallery.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiuiGallery.apk/res/values-hr/strings.xml
@@ -52,6 +52,10 @@
   <string name="acc_video_pause_btn">Pauza</string>
   <string name="acc_video_play_btn">Reproduciraj</string>
   <string name="accept">Prihvati</string>
+  <string name="accessibility_sliding_button_state_description_off">Isključeno</string> 
+  <string name="accessibility_sliding_button_state_description_on">Uključeno</string>
+  <string name="accessibility_tab_state_description_unselect">Nije odabrano</string> 
+  <string name="accessibility_tab_statedesc_unselect">Nije odabrano</string>
   <string name="accept_or_deny">%1$s je podijelio album %2$s s tobom.</string>
   <string name="access_denied_info">Previše pokušaja. Pričekajte minutu ili dvije i pokušajte ponovno.</string>
   <string name="account_crop_user_avatar">Obreži fotografiju</string>
@@ -318,6 +322,10 @@ Najbolji snimci su odabrani automatski. Više fotografija možete dodati ručno.
   <string name="album_creative">Kreativnost</string>
   <string name="album_detail_default_sort_tip">Prebačeno na kronološki redoslijed</string>
   <string name="album_detail_page_empty">Nema stavki</string>
+  <string name="album_detail_sort_menu_asc">Dvaput dodirnite za sortiranje uzlaznim redoslijedom</string>
+  <string name="album_detail_sort_menu_checked">Odabrano</string>
+  <string name="album_detail_sort_menu_desc">Dvaput dodirnite za sortiranje silaznim redoslijedom</string>
+  <string name="album_detail_sort_menu_unchecked">Nije odabrano</string>
   <string name="album_download">Preuzimanja</string>
   <string name="album_faces_name">Osobe</string>
   <string name="album_favorites_name">Favoriti</string>
@@ -900,6 +908,20 @@ Spojite punjač i isključite zaslon da se pojave uspomene."</string>
   <string name="desc_gallery_widget_editor_font_type_list">Font</string>
   <string name="desc_gallery_widget_editor_selected_photo_list">Odabrane slike</string>
   <string name="desc_gallery_widget_editor_text_position_list">Izgled</string>
+  <string name="desc_gallery_widget_editor_font_color_black">Crna</string>
+  <string name="desc_gallery_editor_font_color_blue">Plava</string> 
+  <string name="desc_gallery_editor_font_color_bright_green">Svijetlo zelena</string>
+  <string name="desc_gallery_editor_font_color_cyan">Cijan</string> 
+  <string name="desc_gallery_editor_font_color_gray">Siva</string> 
+  <string name="desc_gallery_editor_font_color_light_blue">Svijetloplava</string> 
+  <string name="desc_gallery_editor_font_color_light_green">Svijetlozelena</string>
+  <string name="desc_gallery_editor_font_color_orange">Narančasta</string> 
+  <string name="desc_gallery_widget_editor_font_color_periwinkle">Zimzelena</string>
+  <string name="desc_gallery_widget_editor_font_color_pink">Ružičasta</string>
+  <string name="desc_gallery_widget_editor_font_color_purple">Ljubičasta</string>
+  <string name="desc_gallery_widget_editor_font_color_red">Crvena</string> 
+  <string name="desc_gallery_widget_editor_font_color_white">Bijela</string> 
+  <string name="desc_gallery_widget_editor_font_color_yellow">Žuta</string>
   <string name="detail_title">Pojedinosti</string>
   <string name="device_list_all">Svi uređaji</string>
   <string name="device_list_more">Više</string>
@@ -1366,6 +1388,8 @@ za fotografije"</string>
   <string name="gallery_sync_disable_toast">Sinkr. Galerije nije omogućena</string>
   <string name="gallery_uninstall_description_content">"Galerija je aplikacija sustava koja vam omogućuje pregled, upravljanje i sinkronizaciju fotografija i videozapisa na svim povezanim uređajima. Ako deinstalirate Galeriju, izgubit ćete stavke koje ste učinili privatnima i druge povezane značajke za gledanje i odabir. Stavke galerije također vam više neće biti dostupne. Svejedno deinstalirati?"</string>
   <string name="gallery_uninstall_description_title">Deinstalirati Galeriju?</string>
+  <string name="gallery_widget_editor_generate_random_text">Slučajno generiraj tekst</string>
+  <string name="gallery_widget_editor_widget_add_image">Dodaj sliku</string>
   <string name="gallery_widget_editor_widget_text_form_label">Tekst</string>
   <string name="gallery_widget_editor_widget_text_form_placeholder">Unesite tekst</string>
   <string name="generate_story_summary">"Snimite dovoljno fotografija, priključite punjač i isključite zaslon kako bi se uspomene pojavile. Već generirane uspomene neće nestati ako isključite ovu značajku."</string>
@@ -1582,6 +1606,7 @@ za fotografije"</string>
   <string name="keyboard_shortcut_paste">Zalijepi</string>
   <string name="keyboard_shortcut_search">Traži</string>
   <string name="keyboard_shortcut_select_all">Odaberi sve</string>
+  <string name="keyboard_shortcut_tile">Prebaci na sve stavke</string>
   <string name="keyboard_shortcut_year">Godišnji prikaz</string>
   <string name="kick_owner_user_positive_button_text">Ukloni</string>
   <string name="kick_owner_user_title">Ukloniti ovu osobu?</string>
@@ -1746,6 +1771,7 @@ za fotografije"</string>
   <string name="map_album_detail_page_title">Lokacija</string>
   <string name="map_enable_position_service_message">Za pregled fotografija i videozapisa na karti prvo uključite usluge lokacije.</string>
   <string name="map_enable_position_service_title">Uključite usluge lokacije</string>
+  <string name="map_gallery">Karta galerije</string>
   <string name="map_grant_position_permission_after_declined_twice_message">Za pregled fotografija i videozapisa na karti dopustite Galeriji da najprije pristupi vašoj lokaciji.</string>
   <string name="map_grant_position_permission_subtitle">Za prikazivanje obližnjih fotografija i videozapisa na karti</string>
   <string name="map_guide_message">Pogledajte svoje fotografije i videozapise na karti</string>
@@ -1830,6 +1856,23 @@ da osobno prilagodite Galeriju"</string>
   <string name="mishop_login_other">Drugi raćun</string>
   <string name="miuix_access_state_desc">Odabrano</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
+  <string name="miuix_accessibility_title">Naslov</string>
+  <string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
+  <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
+  <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izađi iz načina uređivanja</string>
+  <string name="miuix_appcompat_accessibility_new_message">Nova obavijest</string>
+  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Uđi u način uređivanja</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_close">Povucite prstom prema dolje za zatvaranje</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_half_screen">Povucite prstom prema dolje za prelazak na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_minimized">Povucite prstom prema dolje za minimiziranje</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_half_screen">Povucite prstom prema gore za prebacivanje na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_maximized">Povucite prstom prema gore za maksimiziranje</string>
+  <string name="miuix_bottom_sheet_accessibility_state_half_screen">Pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_state_maximized">Maksimizirano</string>
+  <string name="miuix_bottom_sheet_accessibility_state_minimized">Minimizirano</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_half_screen">Prebacivanje na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_maximized">Maksimiziraj</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_minimized">Minimiziraj</string>
   <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_action_mode_title_empty">Odaberi stavke</string>
@@ -1847,7 +1890,6 @@ da osobno prilagodite Galeriju"</string>
   <string name="miuix_appcompat_select_item">Odaberi stavke</string>
   <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
   <string name="miuix_indexer_collect">Zbirke</string>
-  <string name="miuix_indexer_selected">Odabrano %s</string>
   <string name="miuix_item_view_role_description">Kartica</string>
   <string name="miuix_navigator_category_group_collapse">Sažmi</string>
   <string name="miuix_navigator_category_group_expand">Proširi</string>
@@ -1863,6 +1905,14 @@ da osobno prilagodite Galeriju"</string>
   <string name="miuix_sbl_tracking_progress_labe_up_none">"To je sve za sada"</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh_fail">"Ne mogu učitati stavke"</string>
+  <string name="miuix_item_view_accessibility_unselected">Nije odabrano</string>
+  <string name="miuix_navigator_category_group_collapsed">Zatvoreno</string>
+  <string name="miuix_navigator_category_group_expanded">Prošireno</string>
+  <string name="miuix_navigator_toolbar_screen_bottom">Alatna traka na dnu zaslona</string>
+  <string name="miuix_progressbar_loading">Samo trenutak…</string>
+  <string name="miuix_show_password">Prikaži zaporku</string>
+  <string name="miuix_stretchablewidget_collapsed">Sažeto</string>
+  <string name="miuix_stretchablewidget_expanded">Prošireno</string>
   <string name="monday">Ponedjeljak</string>
   <string name="monday_short">Pon</string>
   <string name="monday_shortest">P</string>
@@ -2150,6 +2200,7 @@ Transkodiranje može potrajati neko vrijeme kada ovu značajku koristite prvi pu
   <string name="operation_unhide">Prikaži</string>
   <string name="operation_upgrade_gallery">Ažuriraj</string>
   <string name="operation_video_compress">Sažmi videozapis</string>
+  <string name="operation_video_to_live">Pretvori u dinamički snimak</string>
   <string name="operation_watermark">Zaštitna oznaka</string>
   <string name="orientation_lock_tip">Autom. rotacija isključena</string>
   <string name="orientation_unlock_tip">Autom. rotacija uključena</string>
@@ -2284,6 +2335,11 @@ Transkodiranje može potrajati neko vrijeme kada ovu značajku koristite prvi pu
   <string name="passport_register_by_local_phone_long_text">Izradi račun</string>
   <string name="passport_register_by_local_phone_short_text">Izradi račun</string>
   <string name="passport_register_restricted">Previše je računa povezano s ovim brojem. Pokušajte s drugim.</string>
+  <string name="pasport_register_dialog_message">Želite li sada kreirati Xiaomi račun putem svog telefonskog broja %s?</string>
+  <string name="passport_password_hide_show">Sakrij zaporku</string>
+  <string name="passport_register_dialog_positive">Kreiraj</string>
+  <string name="passport_register_dialog_title">Kreiraj Xiaomi račun</string>
+  <string name="passport_request_permission_title">Potrebna su dopuštenja</string>
   <string name="passport_relogin_notice">Morate se ponovo prijaviti</string>
   <string name="passport_request_agree">Dopusti</string>
   <string name="passport_request_camera_permission_message">"Zaštitit ćemo vaše osobne podatke u skladu s relevantnim zakonima i propisima. Ova aplikacija treba sljedeća dopuštenja za normalan rad:&lt;br>&lt;br>&lt;b>Korištenje kamere (za postavljanje vaše profilne fotografije)&lt;/b>&lt;br>&lt;br>Ako se ne slažete s davanjem takvih dopuštenja, nećete moći koristiti neke značajke ove aplikacije; međutim, njezine osnovne funkcije i dalje će Uvijek možete ograničiti dopuštenja ili opozvati svoje ovlaštenje u Postavkama."</string>
@@ -2312,6 +2368,7 @@ Transkodiranje može potrajati neko vrijeme kada ovu značajku koristite prvi pu
   <string name="passport_talkback_switch_voice_captcha">Prebaci se na glasovni kontrolni kod</string>
   <string name="passport_talkback_voice_captcha">Reprodukcija koda za glasovnu potvrdu</string>
   <string name="passport_ticket_send_by_second">Pošalji za %d</string>
+  <string name="passport_third_sns_service_unavailable">"Usluga nije dostupna. Provjerite je li aplikacija instalirana i nije li blokirana."</string>
   <string name="passport_to_forget_password">Zaboravili ste zaporku?</string>
   <string name="passport_to_password_login">Prijavite se zaporkom</string>
   <string name="passport_to_verify_code_login">Prijavite se SMS-om</string>
@@ -2549,6 +2606,12 @@ Transkodiranje može potrajati neko vrijeme kada ovu značajku koristite prvi pu
   <string name="pic_to_pdf_update_dialog_content">Ažurirajte Mi Doc Viewer na najnoviju verziju kako biste mogli generirati PDF-ove. Ažurirati sada?</string>
   <string name="pic_to_pdf_update_dialog_positive">Ažuriraj</string>
   <string name="pic_to_pdf_update_dialog_title">Ažuriraj Mi Doc Viewer</string>
+  <string name="pic_widget_editor_text_position_bottom">Naslov se prikazuje na dnu</string>
+  <string name="pic_widget_editor_text_position_left_bottom">Naslov se prikazuje u donjem lijevom kutu</string>
+  <string name="pic_widget_editor_text_position_left_top">Naslov se prikazuje u gornjem lijevom kutu</string>
+  <string name="pic_widget_editor_text_position_right_bottom">Naslov se prikazuje u donjem desnom kutu</string>
+  <string name="pic_widget_editor_text_position_right_top">Naslov se prikazuje u gornjem desnom kutu</string>
+  <string name="pic_widget_editor_text_position_top">Naslov se prikazuje na vrhu</string>
   <string name="pick_from_contact">Odaberi iz kontakata</string>
   <string name="pick_people_cover_fail">Dogodila se pogreška. Pokušajte ponovo.</string>
   <string name="pick_people_cover_page_title">Odaberite naslovnu fotografiju</string>
@@ -3401,6 +3464,7 @@ Transkodiranje može potrajati neko vrijeme kada ovu značajku koristite prvi pu
   <string name="security_share_subtitle_no_hide">Sadrži podatke o lokaciji</string>
   <string name="see_ignore_faces">"Prikaži ignorirane osobe"</string>
   <string name="see_more_settings">Dodatne postavke</string>
+  <string name="seeking_progress_bar_talkback">Skočeno na: %1$s %2$s %3$s</string>
   <string name="segment_change_background">Promjena pozadine</string>
   <string name="segment_copy">Kopiraj</string>
   <string name="segment_copy_fail">"Nije moguće kopirati"</string>
@@ -3441,6 +3505,9 @@ Transkodiranje može potrajati neko vrijeme kada ovu značajku koristite prvi pu
   <string name="send_one_zip_dialog_desc">%2$d ZIP datoteka \"%3$s\" od %1$s</string>
   <string name="send_one_zip_dialog_desc_received">Primljena %2$d ZIP datoteka \"%3$s\" od %1$s</string>
   <string name="send_one_zip_dialog_desc_receiving">Primanje %2$d ZIP datoteke \"%3$s\" od %1$s</string>
+  <string name="send_photographic_competition_tip_confirm">Pošalji</string>
+  <string name="send_photographic_competition_tip_content">Slanje ove fotografije zahtijeva metapodatke slike, uključujući model uređaja i parametre fotoaparata. Pošalji sada?</string>
+  <string name="send_photographic_competition_tip_title">Pažnja</string>
   <string name="send_public_url">Pošalji poveznicu albuma</string>
   <string name="send_secret_file_failed">"Ne mogu podijeliti"</string>
   <string name="send_secret_file_space_low">Nema dovoljno prostora za pohranu</string>
@@ -3556,6 +3623,8 @@ Transkodiranje može potrajati neko vrijeme kada ovu značajku koristite prvi pu
   <string name="share_and_delete_screenshot">Izbriši nakon dijeljenja</string>
   <string name="share_by_email_start">Podijeli %1$s u pozadini</string>
   <string name="share_by_email_successfully">Podijeljeno %1$s</string>
+  <string name="share_device_near_share">Dijeli kada ste u blizini</string>
+  <string name="share_device_near_share_image_describe">Približite NFC područja dvaju uređaja jedno drugome da biste započeli dijeljenje</string>
   <string name="share_from">Od %1$s</string>
   <string name="share_public_url_text">Podijelio sam %1$s album s tobom. Pregledaj ga na %2$s</string>
   <string name="share_with_family">Podijelite sa obitelji</string>
@@ -3787,6 +3856,11 @@ Do %1$s možete premjestiti svoje stavke na Google fotografije ili posjetiti i.m
   <string name="talkback_image_with_time">Fotografija, %s</string>
   <string name="talkback_image_with_time_and_location">Fotografija, %1$s, %2$s</string>
   <string name="talkback_input_search_hint">Traka za pretraživanje. Unesite ključne riječi za pretraživanje.</string>
+  <string name="talkback_people_and_group_album_name">Naziv albuma: %1$s</string>
+  <string name="talkback_people_and_group_album_playicon_group">Reproduciraj album s ovom grupom</string>
+  <string name="talkback_people_and_group_album_playicon_journey">Reproduciraj album ovog putovanja</string>
+  <string name="talkback_people_and_group_album_playicon_people">Reproduciraj album s ovom osobom</string>
+  <string name="talkback_people_and_group_album_relation">Odnos: %1$s</string>
   <string name="talkback_portrait_with_time">Portret, %s</string>
   <string name="talkback_portrait_with_time_and_location">Portret, %1$s, %2$s</string>
   <string name="talkback_screenshot_with_time">Snimka zaslona, %s</string>
