--- a/Croatian/main/MiuiSystemUIPlugin.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiuiSystemUIPlugin.apk/res/values-hr/strings.xml
@@ -189,6 +189,7 @@
   <string name="material_slider_range_end">Kraj,</string>
   <string name="material_slider_range_start">Početak,</string>
   <string name="mi_smart_hub_entry_title">Mi Smart Hub</string>
+  <string name="mi_smart_hub_entry_more_button_title">Više</string>
   <string name="midnight">Noć</string>
   <string name="miplay_accessibility_cast">Odaberite uređaj</string>
   <string name="miplay_accessibility_cover">Omot</string>
@@ -210,11 +211,29 @@ Korisnici slušalica koje nisu Xiaomi: poništite svoje slušalice u Bluetooth p
   <string name="miplay_bluetooth_share_title_text">Dijeli audio</string>
   <string name="miplay_detail_divider_title">TV &amp; zvučnici</string>
   <string name="miplay_detail_header_no_song">Nema povijesti reprodukcije</string>
+  <string name="miplay_device_play_state_pause">Pauza</string>
+  <string name="miplay_device_play_state_playing">Reprodukcija</string>
+  <string name="miplay_device_type">Vrsta uređaja</string>
+  <string name="miplay_device_type_name_car">Vozilo</string> 
+  <string name="miplay_device_type_name_default">Ostali uređaji</string>
+  <string name="miplay_device_type_name_glasses">Naočale</string> 
+  <string name="miplay_device_type_name_headSet">Slušalice</string> 
+  <string name="miplay_device_type_name_hearing_aid">Slušni aparat</string>
+  <string name="miplay_device_type_name_laptop">Računalo</string> 
+  <string name="miplay_device_type_name_pad">Tablet</string>
+  <string name="miplay_device_type_name_phone">Telefon</string>
+  <string name="miplay_device_type_name_speaker">Zvučnik</string>
+  <string name="miplay_device_type_name_surround">Stereo sustav</string>
+  <string name="miplay_device_type_name_tv">TV</string>
+  <string name="miplay_device_type_name_watch">Sat</string>
   <string name="miplay_device_full_name">%2$s sa %1$s</string>
   <string name="miplay_headset_lc3_hint">Isključite LC3 da biste mogli prebaciti audio izlaz na ovaj uređaj</string>
   <string name="miplay_not_support_hint">"Ova značajka nije podržana"</string>
   <string name="miplay_service_timeout_toast">Veza je istekla. Pokušajte ponovno.</string>
   <string name="miplay_song_title_empty">Nema pjesama</string>
+  <string name="miplay_next_video">Sljedeća epizoda</string>
+  <string name="miplay_tv_remote_control">Daljinski upravljač</string>
+  <string name="miplay_video_speed">Brzina reprodukcije %sX</string>
   <string name="miplay_switch_local_device_when_in_audio_share_hint">Zaustavite dijeljenje zvuka i pokušajte ponovno</string>
   <string name="miplay_tv_cast_retry_toast">Zaustavite emitiranje i pokušajte ponovno</string>
   <string name="miui_dnd_count_down">Povucite za postavljanje timera</string>
@@ -451,6 +470,7 @@ Korisnici slušalica koje nisu Xiaomi: poništite svoje slušalice u Bluetooth p
   <string name="quick_settings_bluetooth_detail_empty_text">Nema dostupnih uparenih uređaja</string>
   <string name="quick_settings_bluetooth_label">Bluetooth</string>
   <string name="quick_settings_camera_grip_charge">Punjenje putem držača</string>
+  <string name="quick_settings_carsickness">Olakšanje od mučnine prilikom putovanja</string>
   <string name="quick_settings_cellular_detail_dialog_message_turnoff">"Mobilni podaci (WCDMA/LTE) bit će isključeni. Osim ako koristite Wi-Fi, više nećete moći koristiti aplikacije koje zahtijevaju podatkovnu vezu. Slanje ili primanje multimedijskih poruka bit će ograničeno."</string>
   <string name="quick_settings_cellular_detail_dialog_message_turnon">Mobilni podaci bit će uključeni. Povezivanje s mobilnim mrežama može dovesti do dodatnih troškova ovisno o vašem planu plaćanja.</string>
   <string name="quick_settings_cellular_detail_dialog_negative_button_cancel">Odustani</string>
@@ -514,16 +534,31 @@ Duže izlaganje glasnim zvukovima može uzrokovati probleme sa sluhom."</string>
   <string name="save">Spremi</string>
   <string name="search_menu_title">Pretraži</string>
   <string name="send">Pošalji</string>
+  <string name="shutdown_menu">Klizač za isključivanje</string>
   <string name="silent">Bešumno</string>
   <string name="slider_view_content_description">Povucite prema gore za isključivanje ili dolje za ponovno pokretanje</string>
   <string name="slider_view_content_left_description">Povucite prema gore za Fastboot ili prema dolje za Recovery način</string>
   <string name="slider_view_content_right_description">Povucite prema gore za Zrakoplovni način ili prema dolje za Bešumno</string>
   <string name="smart_home_title">Pametni uređaji</string>
+  <string name="state_app_continuity">Korištenje prijenosa aplikacije</string>
+  <string name="state_audio_cast">Emitiranje zvuka putem Xiaomi Smart Playa</string>
+  <string name="state_call_synergy">Korištenje sinkronizacije poziva</string>
+  <string name="state_camera_synergy">Korištenje kamere na više uređaja</string>
+  <string name="state_cellular_synergy">Korištenje bežičnog tetheringa</string>
+  <string name="state_hid_synergy">Korištenje kontrola na više uređaja</string>
+  <string name="state_mirror">Emitiranje u tijeku</string>
+  <string name="state_music_playing">Reproducira se glazba</string>
+  <string name="state_open">Uključeno</string>
+  <string name="state_screen_synergy">Korištenje početnog zaslona+</string>
+  <string name="state_take_photo">Korištenje kamere na više uređaja</string>
+  <string name="state_video_cast">Emitiranje videa putem Xiaomi Smart Playa</string>
   <string name="status_bar_setting_title">Centar za kontrolu &amp; traka statusa</string>
   <string name="summary_collapsed_preference_list">%1$s, %2$s</string>
   <string name="sunday">Nedjelja</string>
   <string name="sunday_short">Ned</string>
   <string name="sunday_shortest">N</string>
+  <string name="super_volume_initial_remind_toast">Pojačavanje glasnoće je uključeno. Vaš se uređaj može zagrijati i trošiti više energije.</string>
+  <string name="super_volume_nearly_full_toast">Pojačavanje glasnoće je uključeno</string>
   <string name="super_volume_text">200%</string>
   <string name="super_volume_toast">Pojačavanje glasnoće je uključeno</string>
   <string name="switch_bar_off">Isključeno</string>
@@ -569,5 +604,7 @@ Duže izlaganje glasnim zvukovima može uzrokovati probleme sa sluhom."</string>
   <string name="wireless_charging_tips_message">Postavite uređaj koji želite bežično napuniti (npr. telefon, pametni sat, slušalice) na stražnju stranu ovog telefona. Prije upotrebe obrnutog bežičnog punjenja provjerite je li ovaj telefon napunjen najmanje %d%%.</string>
   <string name="wireless_charging_tips_sub_message">Drugi uređaj mora podržavati Qi standard bežičnog punjenja.</string>
   <string name="wireless_charging_tips_title">Obrnuto bežično punjenje</string>
+  <string name="wordless_mode_subtitle_text">Uključite za prikaz oznaka ikona u Kontrolnom centru</string>
+  <string name="wordless_mode_title_text">Prikaži oznake ikona</string>
   <string name="yesterday">Jučer</string>
 </resources>
